apps/backend/test/setup.ts
// Mock global functions that might not be available in test environment
global.console = {
  ...console,
  // Uncomment to ignore a specific log level
  // log: vi.fn(),
  // debug: vi.fn(),
  // info: vi.fn(),
  // warn: vi.fn(),
  // error: vi.fn(),
};

// Mock process.env if needed
process.env.NODE_ENV = 'test';
